# ArchiveOS

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
app/: Cargo.toml
app/src/: main.rs
contract/: Cargo.toml
contract/src/: archive.rs  constants.rs  entity.rs  error.rs  gc.rs  import.rs  job.rs  lib.rs  library.rs  (+3 more)
core/: Cargo.toml
core/migrations/: 001_initial.sql  002_collection_fingerprint.sql  003_ytdlp_pipeline.sql  004_entity_roles_provenance.sql  005_entity_assets.sql  006_entity_asset_metadata.sql  007_subscription_options.sql  008_user_library.sql  009_user_media_preference.sql  010_job_progress.sql  011_youtube_source_canonical.sql  012_youtube_source_repair.sql
core/src/: layout.rs  lib.rs  vault.rs
core/src/assets/: mod.rs
core/src/browse/: mod.rs
core/src/cas/: gc.rs  mod.rs  refcount.rs
core/src/channels/: mod.rs
core/src/collections/: mod.rs
core/src/db/: migrate.rs  mod.rs
core/src/entity/: mod.rs
core/src/failures/: mod.rs
core/src/import/: db.rs  mod.rs
core/src/inbox/: fingerprint.rs  mod.rs  path_tags.rs
core/src/jobs/: mod.rs
core/src/library_lists/: mod.rs
core/src/media/: image.rs  kind.rs  mod.rs
core/src/metadata/: mod.rs
core/src/playback/: mod.rs
core/src/preview/: mod.rs
core/src/registry/: mod.rs
core/src/search/: mod.rs
core/src/sources/: mod.rs
core/src/subscriptions/: mod.rs
core/src/tags/: mod.rs
core/src/user_lists/: mod.rs
core/src/user_preferences/: mod.rs
docs/: entity-roles-and-provenance.md  source-entities-and-assets.md  video-archive-mvp.md  web-view-mvp.md
server/: Cargo.toml
server/src/: asset_reconcile_scheduler.rs  blob_gc_scheduler.rs  error.rs  inbox_watcher.rs  main.rs  media.rs  preview_backfill.rs  routes.rs  subscription_scheduler.rs
web/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
worker-thumbnail/: Dockerfile  requirements.txt
worker-ytdlp/: Dockerfile
(+97 files in other folders)
