[package]
name = "archiveos-core"
version = "0.1.0"
edition = "2024"

[dependencies]
archiveos-contract = { path = "../contract" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
