[package]
name = "archiveos-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "archive-os-server"
path = "src/main.rs"

[dependencies]
archiveos-contract = { path = "../contract" }
archiveos-core = { path = "../core" }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
